# AccredoCloudServer

./: .env  Cargo.toml  Dockerfile  docker-compose.yml
src/: auth_data.rs  auth_middleware.rs  bug_report_data.rs  bug_report_handlers.rs  bug_report_mailer.rs  main.rs  transmit_via_async_smtp.rs
