[package]
name = "accredo_server"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.36.0", features = ["full"] }
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
axum = "0.7.5"
axum_typed_multipart = "0.11.1"
dotenv = "0.15.0"
sqlx = { version = "0.7.4", features = [
    "runtime-tokio-rustls",
    "json",
    "postgres",
    "macros",
] }
serde = "1.0.197"
mail-builder = "0.3.2"
mail-send = "0.4.9"
